fixed overflow on ios

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ body {
     margin: 0;
     overscroll-behavior-y: contain;
     -webkit-overflow-scrolling: touch !important;
-    overflow: auto !important;
     height: 100% !important;
 }
 
